--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -111,6 +111,21 @@
                 android:paddingEnd="20dp"
                 android:text="Criar Entrega"
                 android:textAllCaps="false" />
+
+            <Button
+                android:id="@+id/btnCancell"
+                android:background="@drawable/rectangle_cornes_white_borders_red"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginTop="10dp"
+                android:visibility="gone"
+                tools:visibility="visible"
+                android:textColor="@color/colorRed"
+                android:paddingStart="20dp"
+                android:paddingEnd="20dp"
+                android:text="Cancelar Entrega"
+                android:textAllCaps="false" />
         </LinearLayout>
 
 
