--- a/core/src/main/res/layout/list_workorder.xml
+++ b/core/src/main/res/layout/list_workorder.xml
@@ -85,6 +85,65 @@
     </LinearLayout>
 
     <LinearLayout
+        android:id="@+id/containerMotoboy"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_marginTop="5dp">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingStart="10dp"
+            android:paddingEnd="10dp"
+            android:paddingTop="5dp"
+            android:paddingBottom="5dp"
+            android:text="Pagamento"
+            android:textStyle="bold"
+            android:textSize="14sp"
+            />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:gravity="end">
+            <TextView
+                android:id="@+id/txtPricePaymentCourier"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@drawable/rectangle_cornes_gray"
+                android:paddingStart="10dp"
+                android:paddingEnd="10dp"
+                android:paddingTop="5dp"
+                android:paddingBottom="5dp"
+                android:text="Total R$ 0,00"
+                android:textStyle="bold"
+                android:textSize="14sp"
+                />
+
+            <TextView
+                android:id="@+id/txtStatusPaymentCourier"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:ellipsize="end"
+                android:maxLines="1"
+                android:background="@drawable/rectangle_cornes_gray"
+                android:backgroundTint="@color/colorBlue"
+                android:textColor="@color/colorWhite"
+                android:paddingStart="10dp"
+                android:paddingEnd="10dp"
+                android:layout_marginStart="10dp"
+                android:paddingTop="5dp"
+                android:paddingBottom="5dp"
+                android:text="PENDENTE"
+                android:textStyle="bold"
+                android:textSize="14sp"
+                android:layout_gravity="end"/>
+        </LinearLayout>
+    </LinearLayout>
+
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
@@ -143,5 +202,6 @@
                 android:layout_gravity="end"/>
         </LinearLayout>
     </LinearLayout>
+
 
 </LinearLayout>
